Fixing footer background color to be lighter for contrast

--- a/app/assets/stylesheets/geodisy/geo_footer.scss
+++ b/app/assets/stylesheets/geodisy/geo_footer.scss
@@ -5,7 +5,7 @@
 }
 
 #geo-footer-container {
-  background-color: #9B9B9B;
+  background-color: #D1D1D1;
   -webkit-box-shadow: 0 4px 8px -8px rgba(0, 0, 0, .2) inset;
   box-shadow: 0 4px 8px -8px rgba(0, 0, 0, .2) inset;
   clear: both;
